rename predictiveparking -> parkeerscans
